--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     width: 275px;
     height: 500px;
     float: left;
+    
     }
 
 #main {
@@ -18,6 +19,7 @@
     height: 275px;
     border: 1px solid black;
     margin:10px;
+    background-color: coral;
 
 }
 
@@ -46,4 +48,16 @@
     display: inline-block;
     float: left;
     border: 1px solid gray;
+}
+
+#tempAndDes {
+    display: inline-block;
+}
+
+#icon {
+    display: inline-block;
+}
+
+img {
+    width:100px;
 }
